# datom-rs

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  source-files.js  src-files.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  ranger.yml
arc_swap/: all.html  index.html  struct.ArcSwapAny.html  struct.Guard.html  trait.AsRaw.html  trait.RefCnt.html  type.ArcSwap.html  type.ArcSwapOption.html
archery/: all.html  index.html  sidebar-items.js
datom/: Cargo.toml  all.html  build.rs  enum.AttributeType.html  enum.ConnectionError.html  enum.DatomType.html  enum.EID.html  enum.EntityResult.html  enum.Fact.html  enum.Index.html  enum.QueryError.html  enum.StorageError.html  enum.TransactionError.html  enum.Value.html  fn.new_dynamic_connection.html  fn.parse_edn.html  fn.version.html  index.html  sidebar-items.js  struct.AttributeIterator.html  struct.AttributeSchema.html  struct.Connection.html  struct.Database.html  struct.Datom.html  struct.DatomIterator.html  struct.Entity.html  struct.ID.html  struct.Transaction.html  struct.TransactionRecord.html  struct.TransactionResult.html  trait.Transactable.html  type.DynamicConnection.html
datom-c/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  run_cbindgen.bat  run_cbindgen.sh
datom-c/src/: connection.rs  connection_error.rs  database.rs  eid.rs  lib.rs  misc.rs  sled.rs  structs.rs  transaction.rs  transaction_result.rs
datom-java/: .gitattributes  .gitignore  .project  Cargo.toml  gradlew  gradlew.bat  settings.gradle
datom-java/gradle/wrapper/: gradle-wrapper.jar.license  gradle-wrapper.properties
datom-java/lib/: .project  build.gradle
datom-java/lib/src/main/java/engineering/lutris/datom/: Connection.java  Datom.java  DatomJNI.java  Fact.java  HelloWorld.java  InvalidPlatformException.java
datom-java/lib/src/test/java/engineering/lutris/datom/: ConnectionTest.java  DatomTest.java  FactTest.java  HelloWorldTest.java
datom-java/scripts/: rustup-add-targets.sh
datom-java/src/: connection.rs  datom.rs  fact.rs  hello_world.rs  lib.rs
datom-java/tests/: gradle.rs
datom-node/: .gitignore  Cargo.toml  index.node.d.ts  package-lock.json  package.json  package.json.license  tsconfig.json
datom-node/src/: index.ts  lib.rs
datom-node/tests/: basic.test.js  jest.rs  require.test.js
datom/backends/: index.html  sidebar-items.js  struct.RedBlackTreeSetStorage.html  struct.SledStorage.html  struct.TieredStorage.html
datom/backends/redblacktreeset/: struct.RedBlackTreeSetStorage.html
datom/backends/sled/: struct.SledStorage.html
datom/backends/tiered/: struct.TieredStorage.html
datom/builtin_idents/: constant.CARDINALITY.html  constant.CARDINALITY_MANY.html  constant.CARDINALITY_ONE.html  constant.DOC.html  constant.ID.html  constant.IDENT.html  constant.IS_COMPONENT.html  constant.TYPE_BOOLEAN.html  constant.TYPE_DECIMAL.html  constant.TYPE_ID.html  constant.TYPE_INTEGER.html  constant.TYPE_REF.html  constant.TYPE_STRING.html  constant.UNIQUE.html  constant.VALUE_TYPE.html  index.html  sidebar-items.js  static.BUILTIN_ENTITIES.html  static.BUILTIN_ENTITIES_BY_IDENT.html  type.BuiltinEntities.html  type.BuiltinEntitiesByIdent.html  type.BuiltinEntity.html
datom/serial/: fn.avet_attribute_value_range.html  fn.deserialize.html  fn.deserialize_aevt.html  fn.deserialize_avet.html  fn.deserialize_eavt.html  fn.deserialize_tr.html  fn.deserialize_unknown.html  fn.deserialize_vaet.html  fn.eavt_entity_attribute_range.html  fn.eavt_entity_range.html  fn.index_range.html  fn.range_slice.html  fn.serialize.html  fn.serialize_aevt.html  fn.serialize_avet.html  fn.serialize_eavt.html  fn.serialize_tr.html  fn.serialize_vaet.html  fn.tr_range.html  fn.vaet_value_attribute_range.html  fn.vec_range_slice.html  index.html  sidebar-items.js
datom/src/: builtin_idents.rs  lib.rs  merge_iters.rs  serial.rs  storage.rs
datom/src/backends/: btreeset.rs  mod.rs  redblacktreeset.rs  sled.rs  tiered.rs
datom/src/bindings/c/: connection.rs  eid.rs  transaction_result.rs
datom/src/sled/: database.rs  datom_iter.rs
datom/src/traits/: entity.rs  mod.rs  storage.rs
datom/src/types/: attribute_iterator.rs  attribute_schema.rs  connection.rs  connection_error.rs  database.rs  datom.rs  datom_iterator.rs  datom_type.rs  eid.rs  entity.rs  entity_result.rs  fact.rs  id.rs  index.rs  lipsum.txt  mod.rs  query_error.rs  storage_error.rs  transaction.rs  transaction_error.rs  transaction_record.rs  transaction_result.rs  value.rs
datom/storage/: index.html  sidebar-items.js  trait.DurableStorage.html  trait.Storage.html  type.Item.html  type.ItemIterator.html
datom/tests/: base_entity_api.rs  redblacktreeset_base_entity_api.rs  sled_base_entity_api.rs
datom/tests/common/: data.rs  mod.rs  schema.rs
datom/types/attribute_iterator/: struct.AttributeIterator.html
datom/types/attribute_schema/: enum.AttributeType.html  struct.AttributeSchema.html
datom/types/connection/: fn.new_dynamic_connection.html  struct.Connection.html  type.DynamicConnection.html
datom/types/connection_error/: enum.ConnectionError.html
datom/types/database/: struct.Database.html
datom/types/datom/: struct.Datom.html
datom/types/datom_iterator/: struct.DatomIterator.html
datom/types/datom_type/: enum.DatomType.html
datom/types/eid/: enum.EID.html
datom/types/entity/: struct.Entity.html
datom/types/entity_result/: enum.EntityResult.html
datom/types/fact/: enum.Fact.html
datom/types/id/: struct.ID.html
datom/types/index/: enum.Index.html
datom/types/query_error/: enum.QueryError.html
datom/types/storage_error/: enum.StorageError.html
datom/types/transaction/: struct.Transaction.html  trait.Transactable.html
datom/types/transaction_error/: enum.TransactionError.html
datom/types/transaction_record/: struct.TransactionRecord.html
datom/types/transaction_result/: struct.TransactionResult.html
datom/types/value/: enum.Value.html
(+10010 files in other folders)
