# SPDX-FileCopyrightText: 2021 Lutris Engineering, Inc
# SPDX-License-Identifier: BlueOak-1.0.0 OR BSD-2-Clause-Patent
# SPDX-FileContributor: Piper McCorkle <piper@lutris.engineering>

[package]
name = "datom"
version = "0.1.1-pre"
authors = ["Lutris Engineering, Inc <contact@lutris.engineering>"]
edition = "2018"
description = "datom-rs: an open-source database inspired by Datomic"
documentation = "https://os.lutris.engineering/datom-rs/datom/"
homepage = "https://os.lutris.engineering/datom-rs/"
repository = "https://github.com/LutrisEng/datom-rs"
license = "BlueOak-1.0.0 OR BSD-2-Clause-Patent"
keywords = ["database", "datomic"]
categories = ["database-implementations", "database"]

[profile.release]
lto = true

[features]
default = ["sled"]

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
num-bigint = "0.4"

sled = { version = "0.34", optional = true }

[dependencies.bigdecimal]
git = "https://github.com/piperswe/bigdecimal-rs"
branch = "update-dependencies"

[dev-dependencies]
criterion = "0.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]


[[bench]]
name = "serial"
harness = false
