# SPDX-FileCopyrightText: 2021 Lutris Engineering, Inc
# SPDX-License-Identifier: BlueOak-1.0.0 OR BSD-2-Clause-Patent
# SPDX-FileContributor: Piper McCorkle <piper@lutris.engineering>

[package]
name = "datom-c"
version = "0.1.1-pre4"
authors = ["Lutris Engineering, Inc <contact@lutris.engineering>"]
edition = "2018"
description = "C bindings for an open-source database inspired by Datomic"
readme = "../README.md"
homepage = "https://os.lutris.engineering/datom-rs/"
repository = "https://github.com/LutrisEng/datom-rs"
license = "BlueOak-1.0.0 OR BSD-2-Clause-Patent"
keywords = ["database", "datomic"]
categories = ["database"]
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
datom = { path = "../datom" }
libc = "0.2"

[build-dependencies]
cbindgen = "0.23"
