# SPDX-FileCopyrightText: 2022 Lutris, Inc
# SPDX-License-Identifier: BlueOak-1.0.0 OR BSD-2-Clause-Patent
# SPDX-FileContributor: Piper McCorkle <piper@lutris.engineering>

[package]
name = "datom-java"
version = "0.1.1-pre4"
authors = ["Lutris, Inc <contact@lutris.engineering>"]
edition = "2021"
description = "Java bindings for an open-source database inspired by Datomic"
readme = "../README.md"
homepage = "https://os.lutris.engineering/datom-rs/"
repository = "https://github.com/LutrisEng/datom-rs"
license = "BlueOak-1.0.0 OR BSD-2-Clause-Patent"
keywords = ["database", "datomic"]
categories = ["database"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
datom = { path = "../datom" }
jni = "0.19"
