# SPDX-FileCopyrightText: 2022 Lutris, Inc
# SPDX-License-Identifier: BlueOak-1.0.0 OR BSD-2-Clause-Patent
# SPDX-FileContributor: Piper McCorkle <piper@lutris.engineering>

[package]
name = "datom"
version = "0.1.1-pre4"
authors = ["Lutris, Inc <contact@lutris.engineering>"]
edition = "2018"
description = "datom-rs: an open-source database inspired by Datomic"
readme = "../README.md"
homepage = "https://os.lutris.engineering/datom-rs/"
repository = "https://github.com/LutrisEng/datom-rs"
license = "BlueOak-1.0.0 OR BSD-2-Clause-Patent"
keywords = ["database", "datomic"]
categories = ["database-implementations", "database"]

[features]
default = ["redblacktreeset", "sled"]
redblacktreeset = ["rpds", "arc-swap", "archery"]

[dependencies]
uuid = { version = "1", features = ["v4"] }
num-bigint = "0.4"
datom-bigdecimal = "0.3.0"
chrono = "0.4"
once_cell = "1"
thiserror = "1"
miette = "5"

# sled storage backend
sled = { version = "0.34", optional = true }

# redblacktreeset storage backend
rpds = { version = "0.12", optional = true }
arc-swap = { version = "1", optional = true }
archery = { version = "0.4", optional = true }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-for-all", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
